Modifica pagina principale

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
 	<header>
-		<nav class="navbar navbar-default navbar-fixed-top">
+		<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
@@ -30,7 +30,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">Shroom Space</a>
+					<a class="navbar-brand" href="#">Shroom Space Ind.</a>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
@@ -138,7 +138,7 @@
 		</nav>
 	</header>
 
-	<section class="container">
+	<section>
 		<div id="myCarousel" class="carousel slide" data-ride="carousel">
 			<!-- Indicators -->
 			<ol class="carousel-indicators">
@@ -183,13 +183,47 @@
 				<span class="sr-only">Successivo</span>
 			</a>
 		</div>
-		<div class="jumbotron">
 
+		<div class="embed-responsive embed-responsive-16by9">
+			<iframe class="embed-responsive-item" width="854" height="480" src="https://www.youtube.com/embed/RtU_mdL2vBM" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 		</div>
+
+		<div class="container">
+			
+
+		<div class="row">
+			<div class="col-md-6">
+				<h1>News Recenti</h1>
+
+				<h2>Subheading</h2>
+				<p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+
+				<h2>Subheading</h2>
+				<p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+
+				<h2>Subheading</h2>
+				<p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+			</div>
+
+			<div class="col-md-6">
+				<h1>Novità dal blog</h1>
+
+				<h2>Subheading</h2>
+				<p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+
+				<h2>Subheading</h2>
+				<p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+
+				<h2>Subheading</h2>
+				<p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+			</div>
+		</div>
+
+	</div>
 	</section>
 
 	<footer>
-		<nav class="navbar navbar-default navbar-fixed-bottom">
+		<nav class="navbar navbar-inverse navbar-static-bottom">
 			<div class="container">
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
@@ -220,8 +254,6 @@
 			</div>
 		</nav>
 	</footer>
-
-	<p>Hello world!</p>
 
 	<!-- SCRIPTS -->
 	<script src="js/plugins.js"></script>
