Creazione pagine blog
Ancora da modificare il lato

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							</li>
 							<!-- Blog -->
 							<li>
-								<a href="#contact">Blog</a>
+								<a href="blog.html">Blog</a>
 							</li>
 							<!-- Multimedia -->
 							<li class="dropdown">
