Piccoli fix per l'impaginazione della registrazione
Stessi problemi vecchi

--- a/registrazione.html
+++ b/registrazione.html
@@ -177,6 +177,10 @@
                     <form class="form-horizontal">
                 <fieldset>
 		<!-- Form Name -->
+			<ol class="breadcrumb">
+				<li><a href="index.html">Home</a></li>
+				<li class="active">Registrazione</li>
+		  	</ol>
             <legend>Registrati!</legend>
 
             <!-- Text input-->
@@ -260,7 +264,7 @@
             <!-- Text input-->
             <div class="form-group">
             <label class="col-md-4 control-label" for="emailId">Indirizzo email</label>  
-            <div class="col-md-6">
+            <div class="col-md-5">
             <input id="emailId" name="emailId" type="text" placeholder="utente@dominio.it" class="form-control input-md" required="">
                 
             </div>
@@ -270,7 +274,7 @@
             <!-- Prepended checkbox -->
             <div class="form-group">
             <label class="col-md-4 control-label" for="check_critiria">Check the box</label>
-            <div class="col-md-6">
+            <div class="col-md-5">
                 <div class="input-group">
                 <span class="input-group-addon">     
                     <input type="checkbox">    
@@ -286,7 +290,7 @@
             <div class="form-group">
             <label class="col-md-4 control-label" for="submit"></label>
             <div class="col-md-4">
-                <button id="submit" name="submit" class="btn btn-success" action="index.html">Fatto!</button>
+                <button id="submit" name="submit" class="btn btn-success center-block" action="index.html">Fatto!</button>
             </div>
             </div>
 
