Creazione pagina utente e index da loggati
Tentato fix nel css per il footer. Non so se sia una soluzione pulita ma la si può notare nella pagina user.html.

--- a/indexlogged.html
+++ b/indexlogged.html
@@ -130,40 +130,12 @@
 										<a href="#">Dove trovarci</a>
 									</li>
 								</ul>
+                            </li>
+                            <!-- Username -->
+							<li>
+								<a href="user.html">Benvenuto, admin</a>
 							</li>
-							<!-- Login form -->
-							<li class="dropdown">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
-									  <ul id="login-dp" class="dropdown-menu">
-										  <li>
-											   <div class="row">
-														   <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
-																  <div class="form-group">
-																	   <label class="sr-only" for="exampleInputEmail2">Indirizzo email</label>
-																	   <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Indirizzo email" required>
-																  </div>
-																  <div class="form-group">
-																	   <label class="sr-only" for="exampleInputPassword2">Password</label>
-																	   <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required>
-																	   <div class="help-block text-right"><a href="">Non ricordi la password?</a></div>
-																  </div>
-																  <div class="form-group">
-																	  <a href="indexlogged.html"> <button type="submit" class="btn btn-primary btn-block">Vai!</button></a>
-																  </div>
-																  <div class="checkbox">
-																	   <label>
-																	   <input type="checkbox"> tienimi collegato
-																	   </label>
-																  </div>
-														   </form>
-													  </div>
-													  <div class="bottom text-center">
-														  Nuovo? <a href="registrazione.html"><b>Registrati!</b></a>
-														</div>
-													</div>
-											   </li>
-										   </ul>
-									   </li>
+							
 					</ul>
 				</div>
 				<!--/.nav-collapse -->
