--- a/registrazione.html
+++ b/registrazione.html
@@ -273,11 +273,11 @@
 
             <!-- Prepended checkbox -->
             <div class="form-group">
-            <label class="col-md-4 control-label" for="check_critiria">Check the box</label>
+            <label class="col-md-4 control-label" for="check_critiria"></label>
             <div class="col-md-5">
                 <div class="input-group">
                 <span class="input-group-addon">     
-                    <input type="checkbox">    
+                    <input type="checkbox" required="">    
                     <p>Accetto i termini di utilizzo del sito</p> 
                 </span>
                 
