Fixato footer anche in registrazione. Tentativo di fixare bottone login
Nota: non va una sega

--- a/registrazione.html
+++ b/registrazione.html
@@ -301,6 +301,7 @@
 	</section>
 
 	<footer>
+		<div class=footer>
 		<nav class="navbar navbar-inverse navbar-static-bottom">
 			<div class="container">
 				<div id="navbar" class="navbar-collapse collapse">
@@ -331,6 +332,7 @@
 					</ul>
 			</div>
 		</nav>
+	</div>
 	</footer>
 
 	<!-- SCRIPTS -->
