--- a/indexlogged.html
+++ b/indexlogged.html
@@ -132,9 +132,18 @@
 								</ul>
                             </li>
                             <!-- Username -->
-							<li>
-								<a href="user.html">Benvenuto, admin</a>
-							</li>
+							<li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"  aria-haspopup="true" aria-expanded="false">Benvenuto, admin
+                                        <span class="caret"></span></a>
+                                    <ul class="dropdown-menu">
+                                        <li>
+                                            <a href="user.html">Pagina utente</a>
+                                        </li>
+                                        <li>
+                                            <a href="index.html">Logout</a>
+                                        </li>
+                                    </ul>
+                                </li>
 							
 					</ul>
 				</div>
