Sistemato il bottone praticamente rendendo inutili i form lmao

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 																	   <div class="help-block text-right"><a href="">Non ricordi la password?</a></div>
 																  </div>
 																  <div class="form-group">
-																	  <a href="indexlogged.html"><input type="button" class="btn btn-primary btn-block">Vai!</button></a>
+																	  <a href="indexlogged.html"><input type="button" class="btn btn-primary btn-block" value="Vai!"></button></a>
 																  </div>
 																  <div class="checkbox">
 																	   <label>
