Fixato bottone - ignora tutto pure qua

--- a/registrazione.html
+++ b/registrazione.html
@@ -290,7 +290,7 @@
             <div class="form-group">
             <label class="col-md-4 control-label" for="submit"></label>
             <div class="col-md-4">
-                <button id="submit" name="submit" class="btn btn-success center-block" action="index.html">Fatto!</button>
+					<a href="indexlogged.html"><input type="button" class="btn btn-success btn-block" value="Vai!"></button></a>
             </div>
             </div>
 
