--- a/scrivici.html
+++ b/scrivici.html
@@ -15,6 +15,10 @@
 	 crossorigin="anonymous">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
 	 crossorigin="anonymous">
+
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+	 
 </head>
 
 <body>
@@ -77,7 +81,7 @@
 							</li>
 							<!-- Blog -->
 							<li>
-								<a href="blog.html">Blog</a>
+								<a href="blog/">Blog</a>
 							</li>
 							<!-- Multimedia -->
 							<li class="dropdown">
@@ -171,121 +175,65 @@
 		</nav>
 	</header>
 
-	<section>
-		<div id="myCarousel" class="carousel slide" data-ride="carousel">
-			<!-- Indicators -->
-			<ol class="carousel-indicators">
-				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-				<li data-target="#myCarousel" data-slide-to="1"></li>
-				<li data-target="#myCarousel" data-slide-to="2"></li>
-			</ol>
-		
-			<!-- Wrapper for slides -->
-			<div class="carousel-inner" role="listbox">
-				<div class="item active">
-					<img src="img/img1.jpg" alt="...">
-					<div class="carousel-caption">
-						<!-- niente -->
-					</div>
-				</div>
-				<div class="item">
-					<img src="img/img2.jpg" alt="...">
-					<div class="carousel-caption">
-						<!-- niente -->
-					</div>
-				</div>
-				<div class="item">
-					<img src="img/img3.jpg" alt="...">
-					<div class="carousel-caption">
-						<!-- niente -->
-					</div>
-				</div>
-			</div>
-		
-			<div class="carousel-caption">
-				<p><a class="btn btn-lg btn-primary" href="#" role="button">Vai alle esperienze</a></p>
-			</div>
-
-			<!-- Controls -->
-			<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-				<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-				<span class="sr-only">Precedente</span>
-			</a>
-			<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-				<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-				<span class="sr-only">Successivo</span>
-			</a>
-		</div>
-
-		<div class="embed-responsive embed-responsive-16by9">
-			<iframe class="embed-responsive-item" width="854" height="480" src="https://www.youtube.com/embed/RtU_mdL2vBM" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-		</div>
-
-		<div class="container">
-			
-
+	<section class="container-fluid">
+		<h2 class="text-center">SCRIVICI</h2>
 		<div class="row">
-			<div class="col-md-6">
-				<h1>News Recenti</h1>
-
-				<h2>Subheading</h2>
-				<p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-				<h2>Subheading</h2>
-				<p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-				<h2>Subheading</h2>
-				<p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+			<div class="col-sm-5">
+				<p>Contact us and we'll get back to you within 24 hours.</p>
+				<p><span class="glyphicon glyphicon-map-marker"></span> Chicago, US</p>
+				<p><span class="glyphicon glyphicon-phone"></span> +00 1515151515</p>
+				<p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p>
 			</div>
-
-			<div class="col-md-6">
-				<h1>Novità dal blog</h1>
-
-				<h2>Subheading</h2>
-				<p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-				<h2>Subheading</h2>
-				<p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-				<h2>Subheading</h2>
-				<p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+			<div class="col-sm-7 slideanim">
+				<div class="row">
+					<div class="col-sm-6 form-group">
+						<input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+					</div>
+					<div class="col-sm-6 form-group">
+						<input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+					</div>
+				</div>
+				<textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
+				<div class="row">
+					<div class="col-sm-12 form-group">
+						<button class="btn btn-default pull-right" type="submit">Send</button>
+					</div>
+				</div>
 			</div>
 		</div>
-
-	</div>
 	</section>
 
 	<footer class="footer">
-			<nav class="navbar-inverse">
-				<div class="container">
-					<ul class="nav navbar-nav">
-						<li>
-							<a href="#facebook">Facebook</a>
-						</li>
-						<li>
-							<a href="#Twitter">Twitter</a>
-						</li>
-						<li>
-							<a href="#LinkedIn">LinkedIn</a>
-						</li>
-						<li>
-							<a href="#YouTube">YouTube</a>
-						</li>
-					</ul>
-					<ul class="nav navbar-nav navbar-right">
-						<li>
-							<a href="#facebook">Mappa sito</a>
-						</li>
-						<li>
-							<a href="#Twitter">Privacy Policy</a>
-						</li>
-						<li>
-							<a href="#LinkedIn">Copyright</a>
-						</li>
-					</ul>
-				</div>
-			</nav>
-		</footer>
+		<nav class="navbar-inverse">
+			<div class="container">
+				<ul class="nav navbar-nav">
+					<li>
+						<a href="#facebook">Facebook</a>
+					</li>
+					<li>
+						<a href="#Twitter">Twitter</a>
+					</li>
+					<li>
+						<a href="#LinkedIn">LinkedIn</a>
+					</li>
+					<li>
+						<a href="#YouTube">YouTube</a>
+					</li>
+				</ul>
+				<ul class="nav navbar-nav navbar-right">
+					<li>
+						<a href="#facebook">Mappa sito</a>
+					</li>
+					<li>
+						<a href="#Twitter">Privacy Policy</a>
+					</li>
+					<li>
+						<a href="#LinkedIn">Copyright</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+	</footer>
 
 	<!-- SCRIPTS -->
 	<script src="js/plugins.js"></script>
