--- a/nov.html
+++ b/nov.html
@@ -181,39 +181,37 @@
 
     </div><!-- /.container -->
 
-    <footer class="blog-footer">
-      <footer>
-        <nav class="navbar navbar-inverse navbar-static-bottom">
-          <div class="container">
-            <div id="navbar" class="navbar-collapse collapse">
-              <ul class="nav navbar-nav">
-                <li>
-                  <a href="#facebook">Facebook</a>
-                </li>
-                <li>
-                  <a href="#Twitter">Twitter</a>
-                </li>
-                <li>
-                  <a href="#LinkedIn">LinkedIn</a>
-                </li>
-                <li>
-                  <a href="#YouTube">YouTube</a>
-                </li>
-              </ul>
-              <ul class="nav navbar-nav navbar-right">
-                <li>
-                  <a href="#facebook">Mappa sito</a>
-                </li>
-                <li>
-                  <a href="#Twitter">Privacy Policy</a>
-                </li>
-                <li>
-                  <a href="#LinkedIn">Copyright</a>
-                </li>
-              </ul>
-          </div>
-        </nav>
-      </footer>
+    <footer class="footer">
+      <nav class="navbar-inverse">
+        <div class="container">
+          <ul class="nav navbar-nav">
+            <li>
+              <a href="#facebook">Facebook</a>
+            </li>
+            <li>
+              <a href="#Twitter">Twitter</a>
+            </li>
+            <li>
+              <a href="#LinkedIn">LinkedIn</a>
+            </li>
+            <li>
+              <a href="#YouTube">YouTube</a>
+            </li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a href="#facebook">Mappa sito</a>
+            </li>
+            <li>
+              <a href="#Twitter">Privacy Policy</a>
+            </li>
+            <li>
+              <a href="#LinkedIn">Copyright</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </footer>
 
 
 	<!-- SCRIPTS -->
