--- a/searched.html
+++ b/searched.html
@@ -181,50 +181,39 @@
                 <div class="starter-template">
                     <ol class="breadcrumb">
                         <li><a href="index.html">Home</a></li>
-						<li class="active">Ricerca</li>
+                        <li><a href="ricercaglobale.html">Ricerca</a></li>
+						<li class="active">Risultati</li>
                     </ol>
-                    <h2>Cerchi qualcosa?</h2>
-                    <p class="lead">Vediamo se possiamo aiutarti.</p><br>
+                    <h2>Vediamo cosa ho trovato!</h2>
+                    <div class="alert alert-info" role="alert">
+						<a href="#" class="alert-link">Ecco i tuoi risultati:</a>
+					</div>
                     <div class="jumbotron">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <p>Che cosa ti interessa?</p>
-                                <div class="checkbox">
-                                    <label><input type="checkbox" value="" ch>Esperienze</label>
-                                </div>
-                                <div class="checkbox">
-                                    <label><input type="checkbox" value="">News</label>
-                                </div>
-                                <div class="checkbox">
-                                        <label><input type="checkbox" value="" checked>Blog</label>
-                                </div>
-                                <div class="checkbox">
-                                    <label><input type="checkbox" value="" checked>Foto</label>
-                                </div>
-                                <div class="checkbox">
-                                    <label><input type="checkbox" value="">Video</label>
-                                </div>
+                            <div class="media">
+                                    <a href="blog.html#ricercato1">
+                                    <div class="media-left">
+                                        <img class="media-object img-thumbnail" width="100" height="50" src="img/starwars.png" alt="trumpet">
+                                    </div>
+                                    <div class="media-body">
+                                      <h4 class="media-heading">Come procede la guerra? - Blog</h4>
+                                      Il maestro Jedi Qui-Gon Jinn e il suo padawan Obi-Wan Kenobi vengono inviati... Continua nel Blog
+                                    </div>
+                                    </a>
                             </div>
-                            <div class="col-md-6">
-                                    
-                                    <div class="form-group">
-                                            <label for="usr">Qualcosa di specifico?</label>
-                                            <input type="text" class="form-control" id="usr" placeholder="Scrivi cosa vorresti trovare" value="Spaziale">
-                                          </div>
-                                    <div class="radio">
-                                        <label><input type="radio" name="optradio" checked>Keyword</label>
+                            <div class="media">
+                                    <a href="#fotogallery">
+                                    <div class="media-left">
+                                        <img class="media-object img-thumbnail" width="100" height="50" src="img/spaceit.jpg" alt="trumpet">
                                     </div>
-                                    <div class="radio">
-                                        <label><input type="radio" name="optradio">Tag</label>
+                                    <div class="media-body">
+                                      <h4 class="media-heading"> - Foto gallery</h4>
+                                      Apri nella foto gallery
                                     </div>
-                                    <div class="form-group">
-                                        <a href="searched.html"><input type="button" class="btn btn-primary btn-md" value="Vai!"></button></a>
-                                    </div>
+                                    </a>
                             </div>
-                        </div>
                     </div>
                 </div>
-         </div><!-- /.container -->
+        </div><!-- /.container -->
 	</section>
 
 	<footer>
