--- a/foto.html
+++ b/foto.html
@@ -131,6 +131,10 @@
 								</li>
 							</ul>
 						</li>
+						<!-- Ricerca -->
+						<li>
+							<a href="ricercaglobale.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Ricerca</a>
+						</li>
 						<!-- Login form -->
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Login
